<?xml version="1.0"?>
<package format="2">
  <name>baxter_pykdl</name>
  <version>0.1.0</version>
  <description>
    Kyle toying with PyKDL, kdl_parser_py
  </description>

  <maintainer email="kmaroney@rethinkrobotics.com">
    Kyle Maroney
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com/wiki</url>
  <url type="repository">
    https://github.com/rethink-kmaroney/baxter_pykdl
  </url>
  <url type="bugtracker">
    https://github.com/rethink-kmaroney/baxter_pykdl/issues
  </url>
  <author>Kyle Maroney</author>

  <depend>python3-pykdl</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>baxter_core_msgs</depend>
  <depend>baxter_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>liburdfdom-dev</depend>
  <depend>tf</depend>
</package>
